--- a/circle.css
+++ b/circle.css
@@ -22,7 +22,7 @@ body {
     padding: 15px 10px 0px 10px;
     border-radius: 50%;
     font-size: 40px;
-    color: white;
+    color: black;
     font-weight: 300;
     margin: 0px 50px;
 
